# discord-command-trigger

./: README.md  flows.json  main.py  pyproject.toml  templates.json
